--- a/index.html
+++ b/index.html
@@ -22,11 +22,23 @@
         </div>
         <!-- Images div -->
         <div class="images">
-          <a href="list.html" target="_self">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="New Delhi"></a>
-          <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="Goa">
-          <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="Hyderabad">
-          <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="Kolkata">
+            <div class="image">
+              <a href="list.html" target="_self">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="New Delhi"></a>
+                <div class="imgtext">Delhi</div>
+            </div>
+            <div class="image">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="Goa">
+                <div class="imgtext">Goa</div>
+            </div>
+            <div class="image">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="Hyderabad">
+                <div class="imgtext">Hyderabad</div>
+            </div>
+            <div class="image">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="Kolkata">
+                <div class="imgtext">Kolkata</div>
+            </div>
         </div>
         <!-- View more link -->
         <div id="viewmore"><a href="#">View more >></a></div>
