--- a/list.html
+++ b/list.html
@@ -26,20 +26,26 @@
               <div class="hotels">
                 <!-- Hotel 1 - Radisson Blu, New Delhi -->
                 <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
-                <h3>Radisson Blu Hotel</h3><p>5 Star</p><p>New Delhi</p>
+                <div class="hotels-info">
+                  <h3>Radisson Blu Hotel</h3><p>5 Star</p><p>New Delhi</p>
+                </div>
               </div>
             </a>
 
             <div class="hotels">
               <!-- Hotel 2 - The Lalit, New Delhi -->
               <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit">
-              <h3>The Lalit New Delhi</h3><p>4.5 Star</p><p>New Delhi</p>
+              <div class="hotels-info">
+                <h3>The Lalit New Delhi</h3><p>4.5 Star</p><p>New Delhi</p>
+              </div>
             </div>
 
           <div class="hotels">
             <!-- Hotel 3 - Taj Palace, New Delhi -->
             <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
-            <h3>Taj Palace</h3><p>4.0 Star</p><p>New Delhi</p>
+            <div class="hotels-info">
+              <h3>Taj Palace</h3><p>4.0 Star</p><p>New Delhi</p>
+            </div>
           </div>
         </div>
 
