--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,32 @@
   </head>
   <body>
       <div class="container"> <!--Can change the class container div to <main> tag, to show main content-->
-        <p>Thank you for reaching out!!!</p>
-        <p>Please enter your email and we will get back to you</p>
-        <!-- FORM -->
-        <form class="" action="index.html" method="GET" autocomplete="off" target="_self">
-          <!--Email is required-->
-          <input type="email" name="email" value="" placeholder="Enter your email" required>
-          <br>
-          <button type="submit" name="button">Submit</button>
-        </form>
+        <!--Contact Modal-->
+        <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="contact-modal-label">Get in touch</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <p>
+                                            Thank you for reaching out!!! <br>
+                                            Please enter you email and we will get back to you.
+                                        </p>
+                                        <label for="email">Email: </label>
+                                        <input type="text" id="email" name="email" placeholder="Enter your email id" required>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary" data-dismiss="modal">Sumbit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
       </div>
   </body>
 </html>
