--- a/list.html
+++ b/list.html
@@ -3,25 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>List</title>
+    <link href="styles/common.css" rel="stylesheet">
     <link href="styles/list.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Main container -->
-    <div class="container">
+    <div class="containerM">
       <!-- Header div -->
       <header>
         <!--Clickable logo to redirect to index.html-->
         <a href="index.html"><img src="assests/images/logo.png" alt="logo" width="150px" height="100px"></a>
-        <a href="login.html" target="_self">Login</a>
+        <!-- <a href="login.html" target="_self">Login</a> -->
+        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#login-modal" id="login">Login</button>
       </header>
-        <ul> <!--List of links to see views-->
-          <li><a href="#list-view">List View</a></li>
-          <li><a href="#map-view">Map View</a></li>
-        </ul>
+      <ul class="nav nav-pills" id="pills-tab">
+         <li class="nav-item">
+            <a class="nav-link active" data-toggle="pill" href="#list-view">List View</a>
+         </li>
+         <li class="nav-item">
+            <a class="nav-link" data-toggle="pill" href="#map-view">Map View</a>
+         </li>
+      </ul>
         <!-- Hotels Info -->
           <!--Clickable info Div-->
-        <div id="list-view">
+      <div class="tab-content" id="pills-tab-content">
+        <div id="list-view" class="tab-pane fade show active">
             <a href="detail.html">
               <div class="hotels">
                 <!-- Hotel 1 - Radisson Blu, New Delhi -->
@@ -49,14 +60,92 @@
           </div>
         </div>
 
-        <div id="map-view">
+        <div id="map-view" class="tab-pane fade">
           <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="Map Image">
           <p>MAP VIEW</p>
         </div>
+      </div>
+        <!--MODAL CODE-->
+        <!--Login modal-->
+        <!-- <div id="login-modal" tabindex="-1" class="modal fade modals" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header" id="modal-header">
+                        <h4 class="modal-title">Please Login</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                      <form class="" action="index.html" method="GET" autocomplete="off" target="_self">
+                        <label for="example-input-name">Username: </label>
+                        <input type="text" id="example-input-name" name="username" value="" class="example-input-text" placeholder="Enter Username" required>
+                        <br><br>
+                        <label for="example-input-password">Password: </label>
+                        <input type="password" id="example-input-password" name="password" value="" class="example-input-password" placeholder="Enter Password" required>
+                        <br>
+                        <button type="submit" name="button" class="btn btn-primary">Login</button>
+                      </form>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-modal-label" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="login-modal-label">Please Login</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="login-form">
+                                    <div class="login-field">
+                                        <label for="username">Username: </label>
+                                        <input type="text" id="username" name="username" placeholder="Enter Username" required />
+                                    </div>
+                                    <div class="login-field">
+                                        <label for="password">Password: </label>
+                                        <input type="password" id="password" name="password" placeholder="Enter Password" required />
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button id="login-button" type="button" class="btn btn-primary" data-dismiss="modal">Login</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        <!--Contact Modal-->
+        <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="contact-modal-label">Get in touch</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <p>
+                                            Thank you for reaching out!!! <br>
+                                            Please enter you email and we will get back to you.
+                                        </p>
+                                        <label for="email">Email: </label>
+                                        <input type="text" id="email" name="email" placeholder="Enter your email id" required>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
       <!-- Footer div -->
       <footer>
         <!-- Contact us link -->
-        <a href="contact.html" target="_self">Contact Us</a>
+        <!-- <a href="contact.html" target="_self">Contact Us</a> -->
+        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#contact-modal" id="contact">Contact Us</button>
         <!-- Social media links -->
         <div class="social-links">
           <a href="https://www.facebook.com/" target="_blank"><img src="assests/images/facebook.png" alt="facebook"></a>
