--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
                 <div class="imgtext">Kolkata</div>
             </div>
         </div>
+        <!--2nd Div for images-->
+        <div class="images">
+            <div class="image">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" alt="Chennai"></a>
+                <div class="imgtext">Chennai</div>
+            </div>
+            <div class="image">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/fc/agra.jpg" alt="Agra">
+                <div class="imgtext">Agra</div>
+            </div>
+            <div class="image">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/10/a3/3b/8a/screenshot-2017-09-12.jpg" alt="Jaipur">
+                <div class="imgtext">Jaipur</div>
+            </div>
+            <div class="image">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" alt="Bengaluru">
+                <div class="imgtext">Bengaluru</div>
+            </div>
+        </div>
         <!-- View more link -->
         <div id="viewmore"><a href="#" class="btn btn-secondary">View More</a></div>
       </div>
